--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+</head>
+<body>
+    <h1>Hi! I am Ankit Chavan.</h1>
+    <img src="me.jpg" width="400" height="400">
+    <p>
+        I am a Second Year MBA student at ESADE Business School in Barcelona.
+    </p>
+    <p>
+        I am currently doing an exchange at Kellogg School of Management in Evanston, Illinois.
+    </p>
+    <p>
+        You can find me on <a href="https://linkedin.com/in/ankit-chavan">LinkedIn</a> and follow me on <a href="https://www.instagram.com/ankitchavan">Instagram</a>.
+    </p>
+</body>
+</html>
